<?xml version="1.0" encoding="utf-8"?>

<!-- This file is protected under the KILLGPL. -->
<!-- For more information, visit http://www.lukeleber.github.io/KILLGPL.html -->
<!-- -->
<!-- Copyright (c) Luke Leber <LukeLeber@gmail.com> -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/monitor_status_mil_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mil_status_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/monitor_status_mil_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:layout_alignTop="@+id/monitor_status_mil_label"
        android:layout_toRightOf="@+id/space_between_mil_status"/>

    <TextView
        android:id="@+id/fuel_trim_value_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_dtcs_label"
        android:layout_below="@+id/monitor_status_mil_label"/>

    <TextView
        android:id="@+id/monitor_status_dtc_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:layout_alignTop="@+id/fuel_trim_value_1"
        android:layout_alignBottom="@+id/fuel_trim_value_1"
        android:layout_toRightOf="@+id/space_between_n_dtcs"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_to_expand_monitor_status"
        android:id="@+id/fuel_trim_label_2"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fuel_trim_value_1"/>

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/space_between_mil_status"
        android:layout_alignParentBottom="false"
        android:layout_alignRight="@+id/fuel_trim_label_2"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/monitor_status_mil_label"
        android:layout_alignTop="@+id/monitor_status_mil_label"
        android:layout_alignBottom="@+id/monitor_status_mil_label"/>

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/space_between_n_dtcs"
        android:layout_alignTop="@+id/fuel_trim_value_1"
        android:layout_alignBottom="@+id/fuel_trim_value_1"
        android:layout_toRightOf="@+id/fuel_trim_value_1"
        android:layout_alignRight="@+id/fuel_trim_label_2"/>

</RelativeLayout>