<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wide_range_oxygen_sensor_lambda_label"
        android:id="@+id/wide_range_oxygen_sensor_lambda_label"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/wide_range_oxygen_sensor_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:id="@+id/wide_range_oxygen_sensor_lambda_value"
        android:layout_alignParentTop="false"
        android:layout_toRightOf="@+id/wide_range_oxygen_sensor_lambda_label"
        android:layout_alignTop="@+id/wide_range_oxygen_sensor_lambda_label"
        android:layout_alignBottom="@+id/wide_range_oxygen_sensor_lambda_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wide_range_oxygen_sensor_voltage_label"
        android:id="@+id/wide_range_oxygen_sensor_voltage_label"
        android:layout_below="@+id/wide_range_oxygen_sensor_lambda_label"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:id="@+id/wide_range_oxygen_sensor_voltage_value"
        android:layout_below="@+id/wide_range_oxygen_sensor_lambda_value"
        android:layout_toRightOf="@+id/wide_range_oxygen_sensor_lambda_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wide_range_oxygen_sensor_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"/>
</RelativeLayout>